--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
+
 language: python
 python:
- - "2.7"
- - "3.6"
- - "3.7"
+- "2.7"
+- "3.6"
+- "3.7"
 # command to install dependencies
 install:
- - pip install -e .
+- pip install -e .
 script:
-- py.tests
+- py.test
